<resources>
    <string name="app_name">rs.raf.projekatjun.david_maloparac_rn9519</string>
    <string name="add_event">Add event</string>
    <string name="show_events">Show events</string>
    <string name="events">Events</string>
    <string name="check_time_for_location">Check time for location</string>
    <string name="description">Description</string>
    <string name="event_name">Event name</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="url">url</string>
    <string name="save_event">Save event</string>

    <string-array name="cities" >
        <item>Amsterdam</item>
        <item>Athens</item>
        <item>Belgrade</item>
        <item>Budapest</item>
    </string-array>

    <string-array name="priority" >
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>